--- a/ExamRef70483/ExamRef70483/ExamRef70483.csproj
+++ b/ExamRef70483/ExamRef70483/ExamRef70483.csproj
@@ -43,12 +43,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddOn\Generics\GenericList.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P1.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P2.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P3.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P4.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P5.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
