--- a/ExamRef70483/ExamRef70483/ExamRef70483.csproj
+++ b/ExamRef70483/ExamRef70483/ExamRef70483.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,7 +53,20 @@
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P15.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P16.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P17.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P18.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P19.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P2.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P32.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P31.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P30.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P29.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P28.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P27.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P26.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P25.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P24.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P23.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P22.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P3.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P4.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P5.cs" />
@@ -65,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
