Upto Covariance Del

--- a/ExamRef70483/ExamRef70483/ExamRef70483.csproj
+++ b/ExamRef70483/ExamRef70483/ExamRef70483.csproj
@@ -44,6 +44,36 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddOn\Generics\GenericList.cs" />
+    <Compile Include="ManageProgramFlow\EventsAndCallBacks\Listing1P77.cs" />
+    <Compile Include="ManageProgramFlow\EventsAndCallBacks\Listing1P76.cs" />
+    <Compile Include="ManageProgramFlow\EventsAndCallBacks\Listing1P75.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P74.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P73.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P72.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P70.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P68.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P67.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P66.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P65.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P64.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P63.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P62.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P61.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P60.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P59.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P58.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P57.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P56.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P55.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P54.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P53.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P52.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P51.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P50.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P49.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P48.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P47.cs" />
+    <Compile Include="ManageProgramFlow\ImplementProgramFlow\Listing1P46.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P1.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P11.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P10.cs" />
@@ -56,6 +86,7 @@
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P18.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P19.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P2.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P33.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P32.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P31.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P30.cs" />
@@ -68,12 +99,23 @@
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P23.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P22.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P3.cs" />
+    <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P34.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P37.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P36.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P35.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P4.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P5.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P6.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P7.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P8.cs" />
     <Compile Include="ManageProgramFlow\ImplMultithreading\Listing1P9.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P39.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P45.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P44.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P43.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P42.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P41.cs" />
+    <Compile Include="ManageProgramFlow\ManagingMultithreading\Listing1P40.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
